--- a/index.html
+++ b/index.html
@@ -117,7 +117,12 @@
 		</table>
 </nav>
 	<span style="font-family: Calibri;"><p>Equipo 8</p>
-<div align = "left"><p>Segovia Gaspar Juan Daniel<br></div>
+<div align = "left">
+  <p>Segovia Gaspar Juan Daniel<br>
+  </p>
+  <p>Silva Reyes Luis Roberto</p>
+  <p>Solano Ramírez Adrián</p>
+<p></div>
 	</p></span>
 	<h1><br>
 <span style="font-family: Calibri; font-size: 80px">Cifrado</span></h1>
